# beaglegaze-python-sdk

./: .gitignore  README.md  TESTPYPI_SETUP.md  compile_contract.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python.yml
api/: custom_ethereum_testnet_container.py  integration_test_base.py
beagegaze/: async_batch_processor.py  batch_mode.py  batch_ready_event.py  demo.py  smart_contract.py
beaglegaze.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
contracts/: UsageContract_sol_UsageContract.abi
examples/: nft_subscription_demo.py
scripts/: release.sh
src/beaglegaze/: __init__.py  contract_consumer.py  demo.py  metering_event.py  metering_event_observer.py  pay_per_call.py  smart_contract.py  usage_logger.py
src/beaglegaze.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_async_batch_processor.py  test_client_payout_integration.py  test_contract_consumer.py  test_contract_consumer_nft.py  test_developer_voting_integration.py  test_micro_payment_integration.py  test_setup.py  test_usage_contract_integration.py
tests/api/: deploy_smart_contract_test.py  ethereum_testnet.py
