[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "beaglegaze"
dynamic = ["version"]
description = "Multi-Language Web3 Fee Collection Library"
readme = "README.md"
license = {text = "LGPL-3.0"}
authors = [
    {name = "BeagleGaze Team", email = "contact@beaglegaze.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Topic :: Internet :: WWW/HTTP",
]
keywords = ["blockchain", "web3", "ethereum", "micropayments", "smart-contracts"]
requires-python = ">=3.8"
dependencies = [
    "web3",
    "py-solc-x",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "testcontainers",
]
test = [
    "pytest",
    "pytest-mock", 
    "pytest-asyncio",
    "testcontainers",
]

[project.urls]
Homepage = "https://github.com/beaglegaze/beaglegaze-python-sdk"
Repository = "https://github.com/beaglegaze/beaglegaze-python-sdk"
Documentation = "https://github.com/beaglegaze/beaglegaze-python-sdk#readme"
"Bug Tracker" = "https://github.com/beaglegaze/beaglegaze-python-sdk/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config", 
    "--verbose",
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.setuptools_scm]
write_to = "src/beaglegaze/_version.py"
